test/fixtures/public/fail/semantic/badArguments.jmm
/*  REASON:
    Types of arguments of calls must be compatible with the parameters of the method (only for methods of the class being compiled).
*/

class T {
    public static void main(String[] a) { 
      io.println(10);
    }

    public int foo(boolean a){
        this.foo(10);
        this.foo(true,20);
        return 1;
    }
}
